--- a/assets/json/project.json
+++ b/assets/json/project.json
@@ -1,34 +1,47 @@
 {
     "projects": [
         {
-            "title": "Calculator app",
+            "title": "Live Coding Contest",
             "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
             "imgurl": "assets/img/thumbnails/coding-contest-live.png",
-            "badge": [
-                "javascript",
-                "github",
-                "css"
-            ]
+            "liveDemoLink": "https://imhardikdesai.github.io/live-coding-contest/",
+            "badge" : ["<span class=\"badge rounded-pill text-white bg-danger\">HTML</span>"]
         },
         {
             "title": "News Website",
             "discription": "A News website which gives latest news about India. This website Build using Plain Venila Javascript. Also it use Fatch API.",
-            "imgurl": "assets/img/thumbnails/news-website.png"
+            "imgurl": "assets/img/thumbnails/news-website.png",
+            "liveDemoLink": "https://imhardikdesai.github.io/news-website/"
         },
         {
             "title": "Keep My Notes",
             "discription": "This is simple Website for taking your daily life task as a note. You can add title and summary about your note.",
-            "imgurl": "assets/img/thumbnails/notes-app.png"
+            "imgurl": "assets/img/thumbnails/notes-app.png",
+            "liveDemoLink": "https://imhardikdesai.github.io/keep-my-notes/"
         },
         {
             "title": "Guess the Color Game",
             "discription": "Basically, I made simple Analog clock using JavaScript.",
-            "imgurl": "assets/img/thumbnails/guess-the-color-game.png"
+            "imgurl": "assets/img/thumbnails/guess-the-color-game.png",
+            "liveDemoLink": "https://imhardikdesai.github.io/guess-the-color-game/"
         },
         {
-            "title": "Coding Contest Live",
+            "title": "Realtime Clock",
             "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
-            "imgurl": "assets/img/thumbnails/coding-contest-live.png"
+            "imgurl": "assets/img/thumbnails/realtime-clock.png",
+            "liveDemoLink": "https://imhardikdesai.github.io/real-time-clock/"
+        },
+        {
+            "title": "Guess the Number Game",
+            "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
+            "imgurl": "assets/img/thumbnails/guess-the-number.png",
+            "liveDemoLink": "https://imhardikdesai.github.io/guess-the-number-game/"
+        },
+        {
+            "title": "Notes App Android",
+            "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
+            "imgurl": "assets/img/thumbnails/notes-app-android.png",
+            "liveDemoLink": "https://github.com/imhardikdesai/notes-app-android"
         }
     ]
 }
