--- a/assets/json/project.json
+++ b/assets/json/project.json
@@ -3,7 +3,7 @@
         {
             "title": "Live Coding Contest",
             "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
-            "imgurl": "assets/img/thumbnails/coding-contest-live.png",
+            "imgurl": "https://user-images.githubusercontent.com/87645745/180635605-86e30ef7-7d20-424a-a94a-30b9251a3cce.png",
             "liveDemoLink": "https://imhardikdesai.github.io/live-coding-contest/",
             "sourceLink": "https://github.com/imhardikdesai/live-coding-contest",
             "badge": [
@@ -17,7 +17,7 @@
         {
             "title": "News Website",
             "discription": "A News website which gives latest news about India. This website Build using Plain Venila Javascript. Also it use Fatch API.",
-            "imgurl": "assets/img/thumbnails/news-website.png",
+            "imgurl": "https://user-images.githubusercontent.com/87645745/180635616-285a6ec6-1222-4c8b-806c-2013a8b2d9fc.png",
             "liveDemoLink": "https://imhardikdesai.github.io/news-website/",
             "sourceLink": "https://github.com/imhardikdesai/news-website",
             "badge": [
@@ -31,7 +31,7 @@
         {
             "title": "Keep My Notes",
             "discription": "This is simple Website for taking your daily life task as a note. You can add title and summary about your note.",
-            "imgurl": "assets/img/thumbnails/notes-app.png",
+            "imgurl": "https://user-images.githubusercontent.com/87645745/180635621-78f1d20b-b870-492b-b372-1a5f0e06b591.png",
             "liveDemoLink": "https://imhardikdesai.github.io/keep-my-notes/",
             "sourceLink": "https://github.com/imhardikdesai/keep-my-notes",
             "badge": [
@@ -44,7 +44,7 @@
         {
             "title": "Guess the Color Game",
             "discription": "Basically, I made simple Analog clock using JavaScript.",
-            "imgurl": "assets/img/thumbnails/guess-the-color-game.png",
+            "imgurl": "https://user-images.githubusercontent.com/87645745/180635610-f67323bf-c026-4b4f-a019-45335aeb7ad2.png",
             "liveDemoLink": "https://imhardikdesai.github.io/guess-the-color-game/",
             "sourceLink": "https://imhardikdesai.github.io/guess-the-color-game/",
             "badge": [
@@ -57,7 +57,7 @@
         {
             "title": "Realtime Clock",
             "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
-            "imgurl": "assets/img/thumbnails/realtime-clock.png",
+            "imgurl": "https://user-images.githubusercontent.com/87645745/180635630-33a6f094-1b69-4cda-a769-fa3dba682eeb.png",
             "liveDemoLink": "https://imhardikdesai.github.io/real-time-clock/",
             "sourceLink": "https://github.com/imhardikdesai/real-time-clock",
             "badge": [
@@ -69,7 +69,7 @@
         {
             "title": "Guess the Number Game",
             "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
-            "imgurl": "assets/img/thumbnails/guess-the-number.png",
+            "imgurl": "https://user-images.githubusercontent.com/87645745/180635615-f7338270-ef1d-417d-89f5-321489f9b5bf.png",
             "liveDemoLink": "https://imhardikdesai.github.io/guess-the-number-game/",
             "sourceLink": "https://github.com/imhardikdesai/guess-the-number-game",
             "badge": [
@@ -81,7 +81,7 @@
         {
             "title": "Notes App Android",
             "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
-            "imgurl": "assets/img/thumbnails/notes-app-android.png",
+            "imgurl": "https://user-images.githubusercontent.com/87645745/180635628-f74f313e-22b9-4a11-88c3-48f412d82816.png",
             "liveDemoLink": "https://github.com/imhardikdesai/notes-app-android",
             "sourceLink": "https://github.com/imhardikdesai/notes-app-android",
             "badge": [
