--- a/assets/json/project.json
+++ b/assets/json/project.json
@@ -2,7 +2,7 @@
     "projects": [
         {
             "title": "Live Coding Contest",
-            "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
+            "discription": "This is Live coding website will provide information about Realtime Live hackathon in different sites.",
             "imgurl": "https://user-images.githubusercontent.com/87645745/180635605-86e30ef7-7d20-424a-a94a-30b9251a3cce.png",
             "liveDemoLink": "https://imhardikdesai.github.io/live-coding-contest/",
             "sourceLink": "https://github.com/imhardikdesai/live-coding-contest",
@@ -46,7 +46,7 @@
             "discription": "Basically, I made simple Analog clock using JavaScript.",
             "imgurl": "https://user-images.githubusercontent.com/87645745/180635610-f67323bf-c026-4b4f-a019-45335aeb7ad2.png",
             "liveDemoLink": "https://imhardikdesai.github.io/guess-the-color-game/",
-            "sourceLink": "https://imhardikdesai.github.io/guess-the-color-game/",
+            "sourceLink": "https://github.com/imhardikdesai/guess-the-color-game",
             "badge": [
                 "HTML",
                 "CSS",
@@ -56,7 +56,7 @@
         },
         {
             "title": "Realtime Clock",
-            "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
+            "discription": "Basically, I made simple Analog clock using JavaScript. Shows Current time.",
             "imgurl": "https://user-images.githubusercontent.com/87645745/180635630-33a6f094-1b69-4cda-a769-fa3dba682eeb.png",
             "liveDemoLink": "https://imhardikdesai.github.io/real-time-clock/",
             "sourceLink": "https://github.com/imhardikdesai/real-time-clock",
@@ -68,7 +68,7 @@
         },
         {
             "title": "Guess the Number Game",
-            "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
+            "discription": "In this Game Computer will guess the number between 1 to 100. And your task is to find that number in 10 Chance.",
             "imgurl": "https://user-images.githubusercontent.com/87645745/180635615-f7338270-ef1d-417d-89f5-321489f9b5bf.png",
             "liveDemoLink": "https://imhardikdesai.github.io/guess-the-number-game/",
             "sourceLink": "https://github.com/imhardikdesai/guess-the-number-game",
@@ -80,7 +80,7 @@
         },
         {
             "title": "Notes App Android",
-            "discription": "Fans cheering crash was 'mind-blowing' - Hamilton",
+            "discription": "Notes App Will collect your task as a note. You can add title and content. also you can save changes in firebase. This app will provide authentication to user, also give facility to recover password.",
             "imgurl": "https://user-images.githubusercontent.com/87645745/180635628-f74f313e-22b9-4a11-88c3-48f412d82816.png",
             "liveDemoLink": "https://github.com/imhardikdesai/notes-app-android",
             "sourceLink": "https://github.com/imhardikdesai/notes-app-android",
